objects/FLODocs__Commit_Event__e.object
<CustomObject>
    <description>Subscribe to this Platform Event to receive messages on the status of a Git commit.</description>
    <fields>
        <fullName>FLODocs__Async_Job_Id__c</fullName>
        <description>Id of the Apex batch commit job associated with this event.</description>
        <label>Async Job Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__Change_Request_Id__c</fullName>
        <description>Id of the Change Request associated with this Commit event.</description>
        <label>Change Request Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__Files_Committed__c</fullName>
        <description>Number of files committed so far.</description>
        <label>Files Committed</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLODocs__Status__c</fullName>
        <description>Status fo the Commit job. Should match the Version_Control_System_Log__c status values.</description>
        <label>Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__Total_Files__c</fullName>
        <description>Total number of files in the Commit.</description>
        <label>Total Files</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLODocs__Version_Control_System_Log_Id__c</fullName>
        <description>Id of the associated Version Control System Log</description>
        <label>Version Control System Log Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Commit Event</label>
    <pluralLabel>Commit Events</pluralLabel>
</CustomObject>